--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ai-sdk/google": "^1.2.22",
     "@google/generative-ai": "^0.24.1",
+    "ai": "^4.3.19",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -19,6 +21,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google": "^2.1.0",
+    "gooogle": "^0.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
